# dagster_dbt_demo

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
dagster_dbt_demo/: definitions.py
dagster_dbt_demo/assets/: dbt_assets.py  ingestion.py
dagster_dbt_demo/dbt_project/: dbt_project.yml  profiles.yml
dagster_dbt_demo/dbt_project/models/: sources.yml
dagster_dbt_demo/dbt_project/models/marts/: _marts__models.yml  mart_post_engagement.sql  mart_regional_activity.sql  mart_user_activity.sql
dagster_dbt_demo/dbt_project/models/staging/: _staging__models.yml  stg_comments.sql  stg_countries.sql  stg_posts.sql  stg_users.sql
dagster_dbt_demo/jobs/: etl_job.py
dagster_dbt_demo/resources/: database.py  dbt.py
docker/: Dockerfile.dagster  Dockerfile.user_code  dagster.yaml  init-db.sh  workspace.yaml
tests/: test_assets.py
